0.02

0.01 2022-07-04T13:18:39+02:00
 - First version.