@@ -22,6 +22,7 @@ SIGNATURE
 t/Test-JSON-Type/01-use.t
 t/Test-JSON-Type/02-version.t
 t/Test-JSON-Type/03-is_json_type.t
+t/Test-JSON-Type/04-is_json_type_struct.t
 Type.pm
 xt/Test-JSON-Type/01-pod_coverage.t
 xt/Test-JSON-Type/02-pod.t
