@@ -1,4 +1,5 @@
 0.02
+ - Add is_json_type_struct() test subroutine.
 
 0.01 2022-07-04T13:18:39+02:00
  - First version.
